--- a/slides/about.html
+++ b/slides/about.html
@@ -2,7 +2,11 @@
 <html>
   <head>
     <meta http-equiv="Content-Type" content="text/html;charset=utf-8"/>
-    <link type="text/css" rel="stylesheet" href="style.css"/>
+    <link type="text/css" rel="stylesheet" href="../css/style.css"/>
+    <script type="text/javascript">
+      this.substeps = ['d','e'];
+    </script>
+    <script type="text/javascript" src="../js/slide.js"></script>
   </head>
   <body>
     <h2><a href="http://mbostock.github.com/d3/">D3: Visualizing Data with Web Standards</a></h2>
