code show / hide now works!

--- a/index.html
+++ b/index.html
@@ -19,6 +19,12 @@
 
 var slides = [
   "slides/about.html",
+  "slides/force.html",
+  "slides/about.html",
+  "slides/force.html",
+  "slides/about.html",
+  "slides/force.html",
+  "slides/about.html",
   "slides/force.html"
 ];
 
