--- a/slides/about.html
+++ b/slides/about.html
@@ -6,6 +6,7 @@
     <script type="text/javascript">
       this.substeps = ['d','e'];
     </script>
+    <script type="text/javascript" src="../js/d3.v3.js"></script>
     <script type="text/javascript" src="../js/slide.js"></script>
   </head>
   <body>
