--- a/slides/force.html
+++ b/slides/force.html
@@ -3,6 +3,8 @@
   <head>
     <meta http-equiv="Content-Type" content="text/html;charset=utf-8">
     <link type="text/css" rel="stylesheet" href="../css/style.css"/>
+    <link type="text/css"  rel="stylesheet" href="../js/highlight.js/styles/tomorrow-night-bright.css">
+    <script type="text/javascript" src="../js/highlight.js/highlight.pack.js"></script>
     <style type="text/css">
 
 circle.node {
@@ -27,8 +29,8 @@ line.link {
     <script type="text/javascript">
       this.substeps = ['a','b','c'];
     </script>
-    <script type="text/javascript" src="../js/slide.js"></script>
     <script type="text/javascript" src="../js/d3.v3.js"></script>
+    <script type="text/javascript" src="../js/slide.js"></script>
     <script type="text/javascript">
 
 var w = 1280,
@@ -150,5 +152,12 @@ function flatten(root) {
 /* }); */
 
     </script>
+    <div id="code" class="javascript">
+      if(code) {
+        var code = 2;
+        code;
+        code();
+      }
+    </div>
   </body>
 </html>
