infinite feed back loop

--- a/index.html
+++ b/index.html
@@ -4,12 +4,6 @@
     <meta http-equiv="Content-Type" content="text/html;charset=utf-8"/>
     <title>Visualizing Data with Web Standards</title>
     <link type="text/css" rel="stylesheet" href="css/present.css"></script>
-    <script type="text/javascript">
-  var substeps = [];
-  function setSubSteps(slide_substeps) {
-    substeps = slide_substeps;
-  }
-  </script>
   </head>
   <body>
     <iframe id="previous"></iframe>
@@ -19,7 +13,7 @@
 
 var slides = [
   "slides/about.html",
-  "slides/force.html",
+  "slides/start_force.html",
   "slides/about.html",
   "slides/force.html",
   "slides/about.html",
