added bunches of code

--- a/index.html
+++ b/index.html
@@ -12,9 +12,11 @@
     <script type="text/javascript">
 
 var slides = [
-  "slides/about.html",
   "slides/start_force.html",
-  "slides/about.html",
+  "slides/force_code1.html",
+  "gates/index.html",
+  "slides/custom_gravity/index.html",
+  "bubble_cloud/index.html",
   "slides/force.html",
   "slides/about.html",
   "slides/force.html",
