adding more form. adding goofy videos. hoping not to kill my machine with this talk

--- a/index.html
+++ b/index.html
@@ -12,8 +12,14 @@
     <script type="text/javascript">
 
 var slides = [
+  "slides/about.html",
   "slides/start_force.html",
-  "slides/force_code1.html",
+  "slides/force_code_one.html",
+  "slides/force_code_two.html",
+  "slides/start_force.html",
+  "slides/alpha.html",
+  "slides/alpha_out.html",
+  "slides/simulated_annealing.html",
   "gates/index.html",
   "slides/custom_gravity/index.html",
   "bubble_cloud/index.html",
