--- a/slides/about.html
+++ b/slides/about.html
@@ -3,24 +3,17 @@
   <head>
     <meta http-equiv="Content-Type" content="text/html;charset=utf-8"/>
     <link type="text/css" rel="stylesheet" href="../css/style.css"/>
-    <script type="text/javascript">
-      this.substeps = ['d','e'];
-    </script>
     <script type="text/javascript" src="../js/d3.v3.js"></script>
     <script type="text/javascript" src="../js/slide.js"></script>
   </head>
   <body>
-    <h2><a href="http://mbostock.github.com/d3/">D3: Visualizing Data with Web Standards</a></h2>
-    Before we begin, here are some tips:
+    <h1>Using and Abusing the Force</h1>
+    <h1 style="font-size:80%;">Interesting applications of D3's force layout</h1>
     <p>
-    <ul>
-      <li>Use the arrow keys (or space bar) to navigate.
-      <li>Most slides have an interactive feature. Click around!
-      <li>If you want the demos first, go left (←).
-      <li>Accompanying video will be available soon.
-    </ul>
-    <p>
-    Enjoy!<br>
-    <a href="http://twitter.com/mbostock/">@mbostock</a><br>
+    Jim Vallandingham<br/>
+
+    <br/>
+    <a href="http://twitter.com/vlandham/">@vlandham</a><br>
+    </p>
   </body>
 </html>
