added end for good measure

--- a/index.html
+++ b/index.html
@@ -23,11 +23,7 @@ var slides = [
   "gates/index.html",
   "slides/custom_gravity/index.html",
   "bubble_cloud/index.html",
-  "slides/force.html",
-  "slides/about.html",
-  "slides/force.html",
-  "slides/about.html",
-  "slides/force.html"
+  "slides/end.html"
 ];
 
     </script>
