copied fix for glitching. add face nodes

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta http-equiv="Content-Type" content="text/html;charset=utf-8"/>
-    <title>Visualizing Data with Web Standards</title>
+    <title>Using and Abusing the Force</title>
     <link type="text/css" rel="stylesheet" href="css/present.css"></script>
   </head>
   <body>
@@ -12,7 +12,7 @@
     <script type="text/javascript">
 
 var slides = [
-  "slides/about.html",
+  "slides/force_face.html",
   "slides/start_force.html",
   "slides/force_code_one.html",
   "slides/force_code_two.html",
