--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@ var slides = [
   "slides/simulated_annealing.html",
   "gates/index.html",
   "slides/custom_gravity/index.html",
+  "slides/quadtree/index.html",
   "bubble_cloud/index.html",
   "slides/end.html"
 ];
