substep now increments page

--- a/gates/index.html
+++ b/gates/index.html
@@ -53,6 +53,7 @@
   <script src="js/libs/d3.csv.min.js"></script>
   <script src="js/libs/d3.layout.min.js"></script>
   <script src="js/libs/d3.geom.min.js"></script>
+  <script type="text/javascript" src="../js/slide.js"></script>
   <script type="text/coffeescript" src="coffee/vis.coffee"></script>
   <script type="text/javascript">
     $(document).ready(function() {
