--- a/slides/force_code_one.html
+++ b/slides/force_code_one.html
@@ -16,7 +16,7 @@
       <code class="javascript">
       var force = d3.layout.force()
         .nodes(nodes)
-        .size([w, h])
+        .size([width, height])
         .on("tick", tick);
 
       force.start()
