--- a/slides/start_force.html
+++ b/slides/start_force.html
@@ -24,7 +24,7 @@ line.link {
   <body>
     <h2> </h2>
     <script type="text/javascript">
-      this.substeps = ['start','more'];
+      var substeps = ['start','more'];
     </script>
     <script type="text/javascript" src="../js/dat.gui.js"></script>
     <script type="text/javascript" src="../js/d3.v3.js"></script>
