--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 
 var slides = [
   "slides/force_face.html",
+  "slides/simple_force.html",
   "slides/start_force.html",
   "slides/force_code_one.html",
   "slides/force_code_two.html",
