start on bubble chart stuff.

--- a/index.html
+++ b/index.html
@@ -14,10 +14,13 @@
 var slides = [
   "slides/force_face.html",
   "slides/simple_force.html",
-  "slides/start_force.html",
   "slides/force_code_one.html",
   "slides/force_code_two.html",
   "slides/start_force.html",
+  "slides/bubble_chart_intro.html",
+  "slides/bubble_chart_code_one.html",
+  "slides/simple_bubbles_overlap.html",
+  "slides/bubble_chart_code_charge_function.html",
   "slides/alpha.html",
   "slides/alpha_out.html",
   "slides/simulated_annealing.html",
