--- a/gates/index.html
+++ b/gates/index.html
@@ -18,6 +18,9 @@
   <link rel="stylesheet" href="css/bootstrap.min.css">
   <link rel="stylesheet" href="css/style.css">
   <!-- end CSS-->
+    <script type="text/javascript">
+      var substeps = ['start'];
+    </script>
 
   <script src="js/libs/modernizr-2.0.6.min.js"></script>
 </head>
