--- a/index.html
+++ b/index.html
@@ -17,14 +17,16 @@ var slides = [
   "slides/force_code_one.html",
   "slides/force_code_two.html",
   "slides/start_force.html",
+  "slides/bubble_chart_title.html",
   "slides/bubble_chart_intro.html",
   "slides/bubble_chart_code_one.html",
   "slides/simple_bubbles_overlap.html",
   "slides/bubble_chart_code_charge_function.html",
+  "slides/simple_bubbles_with_charge.html",
+  "gates/index.html",
   "slides/alpha.html",
   "slides/alpha_out.html",
   "slides/simulated_annealing.html",
-  "gates/index.html",
   "slides/custom_gravity/index.html",
   "slides/quadtree/index.html",
   "bubble_cloud/index.html",
