--- a/slides/simple_bubbles_overlap.html
+++ b/slides/simple_bubbles_overlap.html
@@ -24,7 +24,7 @@ line.link {
   <body>
     <h2> </h2>
     <script type="text/javascript">
-      var substeps = ['start','more'];
+      var substeps = ['start'];
     </script>
     <script type="text/javascript" src="../js/dat.gui.js"></script>
     <script type="text/javascript" src="../js/d3.v3.js"></script>
