--- a/index.html
+++ b/index.html
@@ -24,6 +24,8 @@ var slides = [
   "slides/bubble_chart_code_charge_function.html",
   "slides/simple_bubbles_with_charge.html",
   "gates/index.html",
+  "slides/custom_force_title.html",
+  "slides/node_data.html",
   "slides/alpha.html",
   "slides/alpha_out.html",
   "slides/simulated_annealing.html",
