--- a/index.html
+++ b/index.html
@@ -26,9 +26,16 @@ var slides = [
   "gates/index.html",
   "slides/custom_force_title.html",
   "slides/node_data.html",
+  "slides/force_code_two.html",
+  "slides/force_code_with_tick_function.html",
+  "slides/force_code_with_tick_function_centers.html",
+  "slides/simple_bubbles_custom_force_no_alpha.html",
+  "slides/simulated_annealing_title.html",
+  "slides/simulated_annealing.html",
   "slides/alpha.html",
   "slides/alpha_out.html",
-  "slides/simulated_annealing.html",
+  "slides/force_code_with_tick_function_centers_alpha.html",
+  "slides/simple_bubbles_custom_force_alpha.html",
   "slides/custom_gravity/index.html",
   "slides/quadtree/index.html",
   "bubble_cloud/index.html",
