start with the collision stuff

--- a/index.html
+++ b/index.html
@@ -36,8 +36,19 @@ var slides = [
   "slides/alpha_out.html",
   "slides/force_code_with_tick_function_centers_alpha.html",
   "slides/simple_bubbles_custom_force_alpha.html",
-  "slides/custom_gravity/index.html",
+  "gates/index.html",
+  "slides/cool_force_layout_quote.html",
+  "slides/collision_title.html",
+  "slides/nyt_bubble_cloud.html",
+  "bubble_cloud/index.html",
+  "slides/collide_code.html",
+  "slides/collision.html",
+  "slides/quadtree_title.html",
+  "slides/quadtree_image.html",
   "slides/quadtree/index.html",
+  "bubble_cloud/index.html",
+  "slides/word_cloud_quote.html",
+  "slides/custom_gravity/index.html",
   "bubble_cloud/index.html",
   "slides/end.html"
 ];
