--- a/slides/cool_force_layout_quote.html
+++ b/slides/cool_force_layout_quote.html
@@ -7,6 +7,7 @@
     <script type="text/javascript" src="../js/slide.js"></script>
   </head>
   <body>
-    <h1>Custom Forces</h1>
+    <blockquote>Who cares how cool this force-directed layout is, what matters to us is content.</blockquote>
+    <div class="author">- Kevin Quealy - Graphics Editor NYT - @KevinQ</div>
   </body>
 </html>
