--- a/slides/quadtree_title.html
+++ b/slides/quadtree_title.html
@@ -7,6 +7,6 @@
     <script type="text/javascript" src="../js/slide.js"></script>
   </head>
   <body>
-    <h1>Custom Forces</h1>
+    <h1>Quadtree</h1>
   </body>
 </html>
