--- a/slides/word_cloud_quote.html
+++ b/slides/word_cloud_quote.html
@@ -7,6 +7,7 @@
     <script type="text/javascript" src="../js/slide.js"></script>
   </head>
   <body>
-    <h1>Custom Forces</h1>
+    <blockquote>Word clouds are the mullet of the Internet</blockquote>
+    <div class="author">- Jeffrey Zeldman - A List Apart</div>
   </body>
 </html>
