--- a/slides/quadtree_image.html
+++ b/slides/quadtree_image.html
@@ -5,8 +5,17 @@
     <link type="text/css" rel="stylesheet" href="../css/style.css"/>
     <script type="text/javascript" src="../js/d3.v3.js"></script>
     <script type="text/javascript" src="../js/slide.js"></script>
+    <style type="text/css">
+      body {
+        background-color: #f6f2ec;
+        background-image: url('../img/nyt_bubble_cloud.png');
+        background-repeat: no-repeat;
+        /* background-size: 100% 100%; */
+        /* background-size: 1280px 800px; */
+      }
+    </style>
   </head>
   <body>
-    <h1>Custom Forces</h1>
+    <h1>Collision Detection</h1>
   </body>
 </html>
