--- a/index.html
+++ b/index.html
@@ -37,11 +37,13 @@ var slides = [
   "slides/force_code_with_tick_function_centers_alpha.html",
   "slides/simple_bubbles_custom_force_alpha.html",
   "gates/index.html",
+  "slides/nyt_bubble_chart.html",
   "slides/cool_force_layout_quote.html",
   "slides/collision_title.html",
   "slides/nyt_bubble_cloud.html",
   "bubble_cloud/index.html",
   "slides/collide_code.html",
+  "slides/simple_bubbles_collide_brute.html",
   "slides/collision.html",
   "slides/quadtree_title.html",
   "slides/quadtree_image.html",
