--- a/slides/force_code_two.html
+++ b/slides/force_code_two.html
@@ -11,7 +11,7 @@
     <script type="text/javascript" src="../js/slide.js"></script>
   </head>
   <body>
-    <h2>Force Code</h2>
+    <h2>Tick Function</h2>
     <pre>
       <code class="javascript">
 // called for every force 'tick'
