--- a/slides/node_data.html
+++ b/slides/node_data.html
@@ -11,7 +11,7 @@
     <script type="text/javascript" src="../js/slide.js"></script>
   </head>
   <body>
-    <h2>Alpha</h2>
+    <h2>Data In Each Node</h2>
     <pre>
       <code class="javascript">
 {
