--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@ var slides = [
   "slides/simple_bubbles_custom_force_alpha.html",
   "gates/index.html",
   "slides/nyt_bubble_chart.html",
+  "slides/multiple_forces_code.html",
   "slides/cool_force_layout_quote.html",
   "slides/collision_title.html",
   "slides/nyt_bubble_cloud.html",
@@ -48,10 +49,13 @@ var slides = [
   "slides/quadtree_title.html",
   "slides/quadtree_image.html",
   "slides/quadtree/index.html",
+  "slides/quadtree_code.html",
   "bubble_cloud/index.html",
   "slides/word_cloud_quote.html",
-  "slides/custom_gravity/index.html",
-  "bubble_cloud/index.html",
+  "slides/custom_node_title.html",
+  "slides/force_images/index.html",
+  "slides/force_states/index.html",
+  "slides/nodes_and_edges_title.html",
   "slides/end.html"
 ];
 
