update for d3 changes

--- a/slides/collision.html
+++ b/slides/collision.html
@@ -64,7 +64,7 @@ force.on("tick", function(e) {
 });
 
 svg.on("mousemove", function() {
-  var p1 = d3.svg.mouse(this);
+  var p1 = d3.mouse(this);
   root.px = p1[0];
   root.py = p1[1];
   force.resume();
