--- a/slides/quadtree_image.html
+++ b/slides/quadtree_image.html
@@ -8,7 +8,7 @@
     <style type="text/css">
       body {
         background-color: #f6f2ec;
-        background-image: url('../img/nyt_bubble_cloud.png');
+        background-image: url('../img/quadtree.png');
         background-repeat: no-repeat;
         /* background-size: 100% 100%; */
         /* background-size: 1280px 800px; */
