--- a/index.html
+++ b/index.html
@@ -56,6 +56,8 @@ var slides = [
   "slides/force_images/index.html",
   "slides/force_states/index.html",
   "slides/nodes_and_edges_title.html",
+  "slides/simple_force.html",
+  "slides/custom_layouts_title.html",
   "slides/end.html"
 ];
 
