--- a/index.html
+++ b/index.html
@@ -57,7 +57,14 @@ var slides = [
   "slides/force_states/index.html",
   "slides/nodes_and_edges_title.html",
   "slides/simple_force.html",
+  "slides/force_with_edges_code.html",
+  "slides/racial_divide/index.html",
   "slides/custom_layouts_title.html",
+  "interactive_network_demo/index.html",
+  "slides/custom_circle_layout_code.html",
+  "slides/macwright_math.html",
+  "slides/cluster_force/index.html",
+  "slides/cluster_force_code.html",
   "slides/end.html"
 ];
 
