--- a/index.html
+++ b/index.html
@@ -59,6 +59,8 @@ var slides = [
   "slides/simple_force.html",
   "slides/force_with_edges_code.html",
   "slides/racial_divide/index.html",
+  "vote_studies/index.html",
+  "slides/remove_links_code.html",
   "slides/custom_layouts_title.html",
   "interactive_network_demo/index.html",
   "slides/custom_circle_layout_code.html",
