added more slides. reworking front part a bit

--- a/bubble_cloud/index.html
+++ b/bubble_cloud/index.html
@@ -57,6 +57,7 @@
   <script defer src="js/plugins.js"></script>
   <script src="js/libs/coffee-script.js"></script>
   <script src="js/libs/d3.v2.js"></script>
+  <script type="text/javascript" src="../js/slide.js"></script>
   <script type="text/coffeescript" src="coffee/vis.coffee"></script>
   <script type="text/javascript">
   </script>
