--- a/index.html
+++ b/index.html
@@ -13,18 +13,26 @@
 
 var slides = [
   "slides/force_face.html",
+  "slides/amanda_js_quote.html",
   "slides/simple_force.html",
+  "slides/nodes_array_code.html",
   "slides/force_code_one.html",
+  "slides/node_data.html",
   "slides/force_code_two.html",
   "slides/start_force.html",
+  "slides/node_charge_code.html",
+  "slides/start_force.html",
   "slides/bubble_chart_title.html",
-  "slides/bubble_chart_intro.html",
+  "slides/nyt_bubble_chart.html",
   "slides/bubble_chart_code_one.html",
   "slides/simple_bubbles_overlap.html",
   "slides/bubble_chart_code_charge_function.html",
   "slides/simple_bubbles_with_charge.html",
   "gates/index.html",
+  "slides/bubble_chart_intro.html",
   "slides/custom_force_title.html",
+  "slides/implicit_position_quote.html",
+  "gates/index.html",
   "slides/node_data.html",
   "slides/force_code_two.html",
   "slides/force_code_with_tick_function.html",
@@ -34,6 +42,7 @@ var slides = [
   "slides/simulated_annealing.html",
   "slides/alpha.html",
   "slides/alpha_out.html",
+  "slides/alpha_blending_quote.html",
   "slides/force_code_with_tick_function_centers_alpha.html",
   "slides/simple_bubbles_custom_force_alpha.html",
   "gates/index.html",
@@ -43,9 +52,11 @@ var slides = [
   "slides/collision_title.html",
   "slides/nyt_bubble_cloud.html",
   "bubble_cloud/index.html",
+  "slides/collide_pseudo_code.html",
   "slides/collide_code.html",
   "slides/simple_bubbles_collide_brute.html",
   "slides/collision.html",
+  "slides/alpha_collision_quote.html",
   "slides/quadtree_title.html",
   "slides/quadtree_image.html",
   "slides/quadtree/index.html",
