--- a/slides/nodes_array_code.html
+++ b/slides/nodes_array_code.html
@@ -5,24 +5,34 @@
     <link type="text/css" rel="stylesheet" href="../css/style.css"/>
     <link type="text/css"  rel="stylesheet" href="../js/highlight.js/styles/tomorrow.css">
     <script type="text/javascript" src="../js/highlight.js/highlight.pack.js"></script>
+    <script type="text/javascript" src="../js/jquery-1.9.1.min.js"></script>
+    <script type="text/javascript" src="../js/jquery.highlight.js"></script>
     <script>hljs.initHighlightingOnLoad();</script>
+    <script type="text/javascript">
+      var substeps = ['highlight'];
+
+      function step(cur_step) {
+        if(cur_step == 'highlight') {
+          $('code').highlight('force')
+
+        } else if(cur_step == 'more') {
+        }
+      };
+    </script>
     
     <script type="text/javascript" src="../js/d3.v3.js"></script>
     <script type="text/javascript" src="../js/slide.js"></script>
   </head>
   <body>
-    <h2>Data In Each Node</h2>
+    <h2>Force Code</h2>
     <pre>
       <code class="javascript">
-{
-  x: 680.27,    // current location
-  y: 401.73,
-  px: 681.25,   // previous location
-  py: 400.73,   
-  amount: 30      // your data
-  // ...
-}
-
+      var nodes = [
+        {amount: 20},
+        {amount: 10},
+        {amount: 40},
+        // ...
+      ];
       </code>
     </pre>
   </body>
