--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 
 var slides = [
   "slides/force_face.html",
+  "slides/remix/index.html",
   "slides/amanda_js_quote.html",
   "slides/simple_force.html",
   "slides/nodes_array_code.html",
