--- a/index.html
+++ b/index.html
@@ -18,7 +18,9 @@ var slides = [
   "slides/simple_force.html",
   "slides/nodes_array_code.html",
   "slides/force_code_one.html",
+  "slides/layouts_quote.html",
   "slides/node_data.html",
+  "slides/force_code_add_node.html",
   "slides/force_code_two.html",
   "slides/start_force.html",
   "slides/node_charge_code.html",
