--- a/slides/force_code_two.html
+++ b/slides/force_code_two.html
@@ -13,7 +13,7 @@
   <body>
     <h2>Tick Function</h2>
     <pre>
-      <code class="javascript">
+      <code class="javascript medium">
 // called for every force 'tick'
 function tick() {
   node.attr("cx", function(d) { return d.x; })
