--- a/slides/nodes_array_code.html
+++ b/slides/nodes_array_code.html
@@ -9,7 +9,7 @@
     <script type="text/javascript" src="../js/jquery.highlight.js"></script>
     <script>hljs.initHighlightingOnLoad();</script>
     <script type="text/javascript">
-      var substeps = ['highlight'];
+      var substeps = [];
 
       function step(cur_step) {
         if(cur_step == 'highlight') {
@@ -24,7 +24,7 @@
     <script type="text/javascript" src="../js/slide.js"></script>
   </head>
   <body>
-    <h2>Force Code</h2>
+    <h2>Nodes Data</h2>
     <pre>
       <code class="javascript">
       var nodes = [
