--- a/slides/nyt_bubble_chart.html
+++ b/slides/nyt_bubble_chart.html
@@ -8,9 +8,9 @@
     <style type="text/css">
       body {
         background-color: #f6f2ec;
-        background-image: url('../img/nyt_bubble_chart_big.png');
+        background-image: url('../img/nyt_bubbles_1024x768.png');
         background-repeat: no-repeat;
-        /* background-size: 100% 100%; */
+        background-size: 100% 100%;
         /* background-size: 1280px 800px; */
       }
     </style>
