--- a/slides/force_code_with_tick_function_centers_alpha.html
+++ b/slides/force_code_with_tick_function_centers_alpha.html
@@ -26,25 +26,23 @@
   <body>
     <h2></h2>
     <pre>
-      <code class="javascript">
-var category_centers = {
+      <code class="javascript small">
+var categoryCenters = {
   left: {x: 300, y: 400},
   right: {x: 900, y: 400}
 };
 
 // called for every force 'tick'
 function tick(e) {
-
-  var alpha = e.alpha;
-  node.each(mess_with_node_position(alpha));
+  node.each(moveTowardCategoryCenter(e.alpha));
 
   node.attr("cx", function(d) { return d.x; })
       .attr("cy", function(d) { return d.y; });
 }
 
-function mess_with_node_position(alpha) {
+function moveTowardCategoryCenter(alpha) {
   return function(d) {
-    var center = category_centers[d.category];
+    var center = categoryCenters[d.category];
 
     d.x = d.x + (center.x - d.x) * 0.1 * alpha;
     d.y = d.y + (center.y - d.y) * 0.1 * alpha;
